# weak-supervision-banking-queries

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
data/: banking77_gemini_label.csv
