[tool.poetry]
name = "weak_supervision"
version = "0.1.0"
description = ""
packages = [{include = "weak_supervision"}]

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^7.0.0"
ipykernel = "^6.29.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
datasets = "^3.6.0"
dotenv = "^0.9.9"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
wordcloud = "^1.9.4"
nltk = "^3.9.1"
snorkel = "0.9.9"
langchain = "^0.3.25"
langchain-openai = "^0.3.18"
openai = "^1.82.0"
langchain-google-genai = "^2.1.4"
transformers = "^4.52.3"
huggingface-hub = {extras = ["hf-xet"], version = "^0.32.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
